# full-rust-wasm-graphics-test

./: Cargo.toml  LICENSE  PORTING_TRIVALIBS_TO_MOONBIT.md  PORTING_TRIVALIBS_TO_TS.md  README.md  build_shaders.sh  index.html
leptors-test/: Cargo.toml
leptors-test/src/: main.rs  render.rs
leptos-test/: Cargo.toml  rust-toolchain.toml
leptos-test/src/: main.rs
moon-webgpu-test/: CLAUDE.md  README.md  index.html
moon-webgpu-test/moon/: moon.mod.json
moon-webgpu-test/src/: main.ts  style.css
moon-webgpu-test2/: .gitignore  package-lock.json  package.json
moon-webgpu-test2/moon/: README.md  moon.mod.json
moon-webgpu-test2/moon/src/: moon.pkg.json  top.mbt
moon-webgpu-test2/src/: main.ts
rust-wasm-test/: Cargo.toml  index.html  simple.html
rust-wasm-test/src/: simple.rs
src/: lib.rs  main.rs  simple.rs  triangle.rs
src/shader/: Cargo.toml
src/shader/src/: lib.rs
trivalibs-moon/: README.md  moon.mod.json
trivalibs-moon/src/math/: common.mbt  index.mbt  mat3.mbt  mat4.mbt  vec2.mbt  vec3.mbt  vec4.mbt
trivalibs-ts/: package-lock.json  package.json  tsconfig.json  vite.config.ts
trivalibs-ts/examples/ball/: geometry.ts  index.html  index.ts  shaders.ts  texture.ts
trivalibs-ts/examples/base_effect/: index.html  index.ts  shaders.ts
trivalibs-ts/examples/blur/: index.html  index.ts  shaders.ts
trivalibs-ts/examples/simple-triangle/: index.html  index.ts  performance-test.html  shaders.ts
trivalibs-ts/src/: index.ts
trivalibs-ts/src/app/: index.ts
trivalibs-ts/src/core/: painter.ts
trivalibs-ts/src/math/: camera.ts  index.ts  (+1 more)
(+15 files in other folders)
