[package]
name = "shader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu" }
trivalibs = { path = "../../trivalibs/crates/trivalibs" }
# spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "1e4e468ccf7965d90a9748c7513f72e852fb5041" }
